selfinstall: configure bootloader values
Signed-off-by: Martin Homuth <martin@martinhomuth.de>

--- a/selfinstall/boot.ini
+++ b/selfinstall/boot.ini
@@ -9,9 +9,11 @@ oem fdisk
 
 # Set recovery settings
 hdmitx edid
-setenv hdmimode "1080p60hz"
+setenv hdmimode "800x480p60hz"
 setenv video_reverse "0"
 setenv osd_reverse "0"
+setenv heartbeat "1"
+setenv disable_vu7 "true"
 
 setenv bootargs "${initargs} logo=osd0,loaded,0x3d800000 vout=${hdmimode},enable hdmimode=${hdmimode} osd_reverse=${osd_reverse} video_reverse=${video_reverse} androidboot.selinux=permissive jtag=disable androidboot.hardware=odroidn2 recovery_part=recovery recovery_offset=0"
 
