--- a/selfinstall/boot.ini
+++ b/selfinstall/boot.ini
@@ -15,7 +15,7 @@ setenv osd_reverse "0"
 setenv heartbeat "1"
 setenv disable_vu7 "true"
 
-setenv bootargs "${initargs} logo=osd0,loaded,0x3d800000 vout=${hdmimode},enable hdmimode=${hdmimode} osd_reverse=${osd_reverse} video_reverse=${video_reverse} androidboot.selinux=permissive jtag=disable androidboot.hardware=odroidn2 recovery_part=recovery recovery_offset=0"
+setenv bootargs "${initargs} logo=osd0,loaded,0x3d800000 vout=${hdmimode},enable hdmimode=${hdmimode} osd_reverse=${osd_reverse} video_reverse=${video_reverse} androidboot.selinux=permissive jtag=disable androidboot.hardware=homie recovery_part=recovery recovery_offset=0"
 
 # Set load addresses
 setenv recovery_addr "0x1080000"
