--- a/init.homie.system.rc
+++ b/init.homie.system.rc
@@ -1,5 +1,5 @@
-import /vendor/etc/init/hw/init.odroid.usb.rc
-import /vendor/etc/init/hw/init.odroid.board.rc
+import /vendor/etc/init/hw/init.homie.usb.rc
+import /vendor/etc/init/hw/init.homie.board.rc
 import /vendor/etc/init/hw/init.odroid.wifi.rc
 import /vendor/etc/init/hw/init.odroid.media.rc
 import /vendor/etc/init/android.hardware.bluetooth@1.0-service.${ro.bt.service}.rc
